--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,13 @@ dependencies:
   flutter_bloc: ^8.1.6
   go_router: ^14.3.0
   hive: ^2.2.3
+  hive_flutter: ^1.1.0
   font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
+  build_runner: ^2.1.7
+  hive_generator: ^2.0.1
+    
   flutter_test:
     sdk: flutter
 
@@ -50,7 +54,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
