--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   font_awesome_flutter: ^10.7.0
+  device_info_plus: ^11.1.0
 
 dev_dependencies:
   build_runner: ^2.1.7
@@ -84,7 +85,7 @@ flutter:
   fonts:
     - family: Roboto
       fonts:
-        - asset: asset\static\font\Roboto-Regular.ttf
+        - asset: asset/static/font/Roboto/Roboto-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
