--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   hive_flutter: ^1.1.0
   font_awesome_flutter: ^10.7.0
   device_info_plus: ^11.1.0
+  top_snackbar_flutter: ^3.1.0
 
 dev_dependencies:
   build_runner: ^2.1.7
