--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   device_info_plus: ^11.1.0
   top_snackbar_flutter: ^3.1.0
+  get_it: ^8.0.0
 
 dev_dependencies:
   build_runner: ^2.1.7
