--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   device_info_plus: ^11.1.0
   top_snackbar_flutter: ^3.1.0
   get_it: ^8.0.0
+  loading_indicator: ^3.1.1
 
 dev_dependencies:
   build_runner: ^2.1.7
