--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   top_snackbar_flutter: ^3.1.0
   get_it: ^8.0.0
   loading_indicator: ^3.1.1
+  equatable: ^2.0.0
 
 dev_dependencies:
   build_runner: ^2.1.7
