--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   get_it: ^8.0.0
   loading_indicator: ^3.1.1
   equatable: ^2.0.0
+  bloc: ^8.1.4
 
 dev_dependencies:
   build_runner: ^2.1.7
