--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   loading_indicator: ^3.1.1
   equatable: ^2.0.0
   bloc: ^8.1.4
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   build_runner: ^2.1.7
