--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   equatable: ^2.0.0
   bloc: ^8.1.4
   carousel_slider: ^5.0.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.1.7
