--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   bloc: ^8.1.4
   carousel_slider: ^5.0.0
   auto_size_text: ^3.0.0
+  dotted_border: ^2.1.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   build_runner: ^2.1.7
