--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   auto_size_text: ^3.0.0
   dotted_border: ^2.1.0
   image_picker: ^1.1.2
+  meta: ^1.15.0
 
 dev_dependencies:
   build_runner: ^2.1.7
