--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   dotted_border: ^2.1.0
   image_picker: ^1.1.2
   meta: ^1.15.0
+  animated_text_kit: ^4.2.2
+  animations: ^2.0.11
 
 dev_dependencies:
   build_runner: ^2.1.7
