--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,13 +54,22 @@ dependencies:
   meta: ^1.15.0
   animated_text_kit: ^4.2.2
   animations: ^2.0.11
+  flutter_launcher_icons: ^0.14.1
 
 dev_dependencies:
   build_runner: ^2.1.7
   hive_generator: ^2.0.1
-    
+
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path_android: "asset/static/image/LOGO.png" 
+  image_path_ios: "asset/static/image/LOGO.png"
+  remove_alpha_ios: true
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
