--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   meta: ^1.15.0
   animated_text_kit: ^4.2.2
   animations: ^2.0.11
-  flutter_launcher_icons: ^0.14.1
+  icons_launcher: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.1.7
@@ -63,14 +63,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-flutter_launcher_icons:
-  android: true
-  ios: true
-  image_path_android: "asset/static/image/LOGO.png" 
-  image_path_ios: "asset/static/image/LOGO.png"
-  remove_alpha_ios: true
-
-
+icons_launcher:
+  platforms:
+    android:
+      enable: true
+      image_path: "asset/static/image/LOGO.png"
+    ios:
+      enable: true
+      image_path: "asset/static/image/LOGO.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -91,6 +91,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asset/static/image/
+    - asset/static/image/LOGO.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
