--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   animations: ^2.0.11
   icons_launcher: ^3.0.0
+  http_parser: ^4.0.2
 
 dev_dependencies:
   build_runner: ^2.1.7
