--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   animations: ^2.0.11
   icons_launcher: ^3.0.0
   http_parser: ^4.0.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   build_runner: ^2.1.7
