--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   font_awesome_flutter: ^10.7.0
-  device_info_plus: ^11.1.0
+  device_info_plus: ^10.1.2
   top_snackbar_flutter: ^3.1.0
   get_it: ^8.0.0
   loading_indicator: ^3.1.1
@@ -57,6 +57,8 @@ dependencies:
   icons_launcher: ^3.0.0
   http_parser: ^4.0.2
   url_launcher: ^6.3.1
+  pdfx: ^2.8.0
+
 
 dev_dependencies:
   build_runner: ^2.1.7
@@ -93,7 +95,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asset/static/image/
-    - asset/static/image/LOGO.png
+    - asset/static/pdf/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
